[package]
name = "applied"
version = "0.1.0"
authors = ["Sean McEligot <sean.mceligot@gmail.com>"]
edition = "2018"

[dependencies]
ansi_term = "*"
clap = "*"
config = "*"
dirs = "*"
dotenv = "*"
env_logger = "*"
failure = "*"
getopts = "*"
glob = "*"
libc="*"
log = "*"
rand = "*"
regex = "*"
serde = "*"
serde_derive = "*"
simple_logger = "*"
tempfile = "*"
thiserror = "*"
toml = "*"
which = "*"

